--- a/slidemenu/Base.lproj/Main.storyboard
+++ b/slidemenu/Base.lproj/Main.storyboard
@@ -1,26 +1,180 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kwy-lS-ulF">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="97G-6G-PsT">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tabBarController id="AEp-4L-Wcn" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="AEH-YO-SH8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zil-6L-I3R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="100" y="-26"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="aBU-KO-Fvs">
+            <objects>
+                <tableViewController id="OLN-Lc-fL4" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="QVC-fF-Qyf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zhD-NY-3gi">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zhD-NY-3gi" id="fG4-LK-OK9">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ijh-50-ce1">
+                                            <rect key="frame" x="8" y="4" width="46" height="35"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="35" id="0hZ-eU-dz8"/>
+                                                <constraint firstAttribute="width" constant="46" id="dv2-Lg-JiD"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="93m-Ou-oX5">
+                                            <rect key="frame" x="76" y="14" width="42" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="3oC-IV-p3K"/>
+                                                <constraint firstAttribute="width" constant="42" id="tir-J0-zxk"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ijh-50-ce1" firstAttribute="leading" secondItem="fG4-LK-OK9" secondAttribute="leading" constant="8" id="4YU-e7-i5o"/>
+                                        <constraint firstAttribute="bottom" secondItem="ijh-50-ce1" secondAttribute="bottom" constant="4" id="5WU-o5-K6j"/>
+                                        <constraint firstItem="93m-Ou-oX5" firstAttribute="bottom" secondItem="fG4-LK-OK9" secondAttribute="bottomMargin" id="8Hw-Ts-bhA"/>
+                                        <constraint firstItem="93m-Ou-oX5" firstAttribute="top" secondItem="fG4-LK-OK9" secondAttribute="topMargin" constant="6" id="GpC-e9-yo4"/>
+                                        <constraint firstItem="93m-Ou-oX5" firstAttribute="leading" secondItem="ijh-50-ce1" secondAttribute="trailing" constant="22" id="ilP-kk-VVS"/>
+                                        <constraint firstItem="ijh-50-ce1" firstAttribute="top" secondItem="fG4-LK-OK9" secondAttribute="top" constant="4" id="kh3-E2-F0R"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="OLN-Lc-fL4" id="7Kn-sW-l81"/>
+                            <outlet property="delegate" destination="OLN-Lc-fL4" id="zl8-bq-zfc"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="bFx-rX-Hfw"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BVL-2k-3tM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1140" y="-27"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="0v7-zH-Bgb">
+            <objects>
+                <viewController id="vlQ-GO-nwv" customClass="ViewController" customModule="slidemenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="41C-XC-rKy"/>
+                        <viewControllerLayoutGuide type="bottom" id="WBu-He-FUs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="95V-LM-CID">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xO-iE-yeC">
+                                <rect key="frame" x="16" y="287" width="330" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="330" id="2Bd-ZV-HzG"/>
+                                    <constraint firstAttribute="height" constant="21" id="gf0-Av-KV8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3xO-iE-yeC" firstAttribute="centerX" secondItem="95V-LM-CID" secondAttribute="centerX" constant="-6.5" id="2js-zt-CMo"/>
+                            <constraint firstItem="3xO-iE-yeC" firstAttribute="centerY" secondItem="95V-LM-CID" secondAttribute="centerY" constant="-36" id="Q6k-jy-SaB"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="OJH-hH-eDo">
+                        <barButtonItem key="leftBarButtonItem" image="Burger" style="plain" id="EoV-BQ-ebQ">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cPB-9K-QKr">
+                                <rect key="frame" x="16" y="9" width="25" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Burger"/>
+                                <connections>
+                                    <action selector="menuBar:" destination="vlQ-GO-nwv" eventType="touchUpInside" id="wqA-9f-7dy"/>
+                                </connections>
+                            </button>
+                            <connections>
+                                <action selector="menuBar" destination="vlQ-GO-nwv" id="zkv-EN-HKI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="menuBar" destination="EoV-BQ-ebQ" id="ZDV-aP-jmp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iX8-mh-C2w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2334" y="-663"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="M1y-jn-lJ7">
+            <objects>
+                <viewController id="Kwy-lS-ulF" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GIW-WS-IHc"/>
+                        <viewControllerLayoutGuide type="bottom" id="PNe-Rh-yN3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BVd-ra-ctY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="OLN-Lc-fL4" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="QNE-fm-Bhc"/>
+                        <segue destination="AEp-4L-Wcn" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="RJv-Sz-DTe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fki-fl-lXh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="953" y="-783"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4hW-za-KIR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i5h-3G-zal" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BXq-ft-NEQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.19022836902574802" blue="0.088661016564996697" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vlQ-GO-nwv" kind="relationship" relationship="rootViewController" id="pJR-Fw-MyE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ho4-73-jF5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1650" y="-663"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Burger" width="25" height="25"/>
+    </resources>
 </document>
